--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-users-permissions": "4.2.0",
     "@strapi/strapi": "4.2.0",
     "better-sqlite3": "7.4.6",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "strapi-provider-upload-imagekit": "^4.0.2"
   },
   "author": {
     "name": "A Strapi developer"
