--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-graphql": "4.2.0",
-    "@strapi/plugin-i18n": "4.2.0",
-    "@strapi/plugin-users-permissions": "4.2.0",
-    "@strapi/strapi": "4.2.0",
-    "better-sqlite3": "7.4.6",
+    "@strapi/plugin-graphql": "v4.2.2",
+    "@strapi/plugin-i18n": "v4.2.2",
+    "@strapi/plugin-users-permissions": "v4.2.2",
+    "@strapi/strapi": "v4.2.2",
+    "better-sqlite3": "7.5.3",
     "pg": "^8.7.3",
     "strapi-provider-upload-imagekit": "^4.0.2"
   },
